[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uw-api-keys"
version = "0.0.1"
authors = [
  { name="Ubiwhere", email="hello@ubiwhere.com"},
]
description = "Highly customisable and dead-simple API keys for Django REST managed in Django Admin"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ubiwhere/uw-api-keys"
"Bug Tracker" = "https://github.com/Ubiwhere/uw-api-keys/issues"