[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "uw-api-keys"
version = "0.0.1"
authors = [
  { name="Ubiwhere", email="hello@ubiwhere.com"},
]
description = "Highly customisable and dead-simple API keys for Django REST managed in Django Admin"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Ubiwhere/uw-api-keys"
"Bug Tracker" = "https://github.com/Ubiwhere/uw-api-keys/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}